--- a/.github/workflows/test_with_mdn.yml
+++ b/.github/workflows/test_with_mdn.yml
@@ -29,7 +29,7 @@ jobs:
         fetch-depth: 0
         
     - name: Run
-      run: cargo run -- --content ./content/files/en-us --translation ./translated-content/files/es --verbose compare
+      run: cargo run --release -- --content ./content/files/en-us --translation ./translated-content/files/es --verbose compare
       
     - uses: actions/upload-artifact@v4
       id: artifact-upload
