chore{cargo}: add package.description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "translation-version"
+description = "CLI tool to compare declared translation version with original Git version"
 license = "MPL-2.0"
 repository = "https://github.com/cheeslide/translation-version"
 version = "0.1.0"
